<resources>
    <string name="app_name">CropWatch_App</string>
        <string name="login">Login</string>
        <string name="Logo">applogo</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="todo">TODO</string>
        <string name="Homepage">Welcome to the Home Page!</string>
        <string name="textview">TextView</string>
        <string name="add">Add</string>
        <string name="today_s_tasks">Today\'s Tasks</string>
        <string name="new_page">New Page</string>
        <string name="next_page">Next Page</string>
        <string name="go_to_page">Go to Page</string>
        <string name="Nextt">New Page</string>
        <string name="Doto">TODO</string>
        <string name="home">Home</string>
        <string name="PAGE">TODO</string>
        <string name="PROFILE">Profile</string>
        <string name="home_icon">Home Icon</string>
        <string name="person_icon">Person ICon</string>
        <string name="view_headline">View Headline</string>
        <string name="name">enter_name</string>
        <string name="email">enter_email</string>
        <string name="save">Save</string>
        <string name="profile_icon">Profile Icon</string>
        <string name="Picture">TODO</string>
        <string name="go_back_to_page">Go back to Page</string>
        <string name="task_icon">task_icon</string>
        <string name="profile_icon1">Profile Icon</string>
        <string name="task_info">Task Info</string>
        <string name="submit">Submit</string>
        <string name="enter_location">Enter Location</string>
        <string name="register">Register</string>
        <string name="Password">Password</string>
        <string name="first_name">First Name</string>
        <string name="Register">Register</string>
        <string name="last_name">Last Name</string>
        <string name="Email">Email</string>
        <string name="registration_form">Registration Form</string>
    </resources>