<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:ignore="ExtraText,VisualLintBounds">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="290dp"
        android:layout_height="177dp"
        android:gravity="center"
        android:text="@string/today_s_tasks"
        android:textColor="#424242"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:id="@+id/scrollViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

    </ScrollView>


    <ImageView
        android:id="@+id/addButton"
        android:layout_width="46dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:contentDescription="TODO"
        android:src="@drawable/baseline_add_circle_24"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        tools:ignore="ContentDescription,HardcodedText" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/go_to_page"
        android:textColor="#212121"
        app:drawableLeftCompat="@drawable/baseline_arrow_circle_right_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="280dp"
        tools:ignore="DuplicateIds,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>